--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my second github repo</title>
 </head>
 <body>
-    
+    <h1>push in github</h1>
+    <h2>i can do it</h2>
+    <h3>new code changed</h3>
 </body>
 </html>
