--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>push in github</h1>
     <h2>i can do it</h2>
     <h3>new code changed</h3>
+    <p>hyysju ushuje euhuek</p>
+    <p>im codding vkdjdm dhdj,d</p>
+    
 </body>
 </html>
