--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>new code changed</h3>
     <p>hyysju ushuje euhuek</p>
     <p>im codding vkdjdm dhdj,d</p>
+    <img src="nizam.png" alt="">
     
 </body>
 </html>
